# qnabot-on-aws

./: .eslintrc.js  .gitignore  BotRoutingREADME.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  NOTICE.txt  QnABotDashboard.json  README.md  SECURITY.md  Update_previous_session_values.patch  VPCSupportREADME.md  VPC_Updates_and_lodash_version_changes_.patch  config-botrouter.json  config-elicit-response.json  config.js  config.js.example  configDefault.json  configOregonState.json  configbobpskier8.json  configreinvent2019branch.json  encryptionchanges.patch  hardening.py  lexbotcfnfixes3-0-3.patch  lexbotcfnfixes3-0-3C.patch  package-lock.json  package.json  patch_for_tests_and_security_updates_.patch  run-all-tests.sh  solution-manifest.yaml  sortedlistofexportsbydate.patch
.nightswatch/: nightswatch_config.json  pyproject.toml  requirements.txt
.nightswatch/deployment/: taskcat.yml
.nightswatch/functional/: conftest.py  pytest.ini  test_1_login.py  test_2_import.py  test_embeddings.py  test_export.py  test_guardrails.py  test_kendra.py  test_knowledge_base.py  test_lambda_hooks.py  test_llm.py  test_question_designer.py  test_routing.py  test_sanitization.py  test_session_attribute.py  test_settings.py  test_translate.py  test_tuning.py
.nightswatch/functional/files/: EPCTerminology.csv  import-fail-expected.json  import-fail.xlsx  import-pass-expected.json  import-pass.xlsx  terms.csv
.nightswatch/functional/helpers/: __init__.py  cfn_parameter_fetcher.py  cloud_watch_client.py  cognito_client.py  iam_client.py  kendra_client.py  lex_client.py  s3_client.py  translate_client.py
.nightswatch/functional/helpers/bot_intents/: get_attribute.json  greetings.json  set_attribute.json
.nightswatch/functional/helpers/utils/: textbox.py
.nightswatch/functional/helpers/website_model/: chat_page.py  custom_terminology_page.py  dom_operator.py  edit_page.py  export_page.py  import_page.py  kendra_page.py  login_page.py  menu_nav.py  settings_page.py
.nightswatch/functional/question_bank/: embeddings_questions.json  guardrail_question.json  import_questions.json  import_questions_qna.json  import_questions_slot.json  import_questions_text.json  kendra_questions.json  large_import_questions.json  llm_questions.json  question_designer_questions.json  routing_questions.json  sanitization_questions.json  session_attribute_questions.json  settings_questions.json  translate_questions.json
.nightswatch/scripts/: delete_admin_users.py  delete_kendra_data_source.py  delete_role.py  delete_s3_bucket.py  post_undeploy.sh  pre_deploy.sh  pytest_jest-1.0.0-py3-none-any.whl  run_regression_tests.sh
.nightswatch/scripts/utils/: listregions.py
assets/: Makefile  (+2 more)
source/cli/: .coveragerc  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run-pytest.py
source/cli/aws_solutions/core/: __init__.py  config.py  helpers.py  logging.py
source/cli/tests/: __init__.py  conftest.py
source/lambda/kendra-webcrawler-schedule-updater/: .coveragerc  Makefile  kendra_webcrawler_schedule_updater.py  pyproject.toml
source/lambda/kendra-webcrawler-schedule-updater/test/: conftest.py  test_lambda_function.py
source/lambda/lexv2-build/: Makefile  handler.py  pyproject.toml  requirements-test.txt  requirements.txt
source/lambda/lexv2-build/test/: conftest.py  test_lambda_function.py
source/lambda/s3-clean/: .coveragerc  Makefile  lambda_function.py  pyproject.toml  requirements-test.txt  requirements.txt
source/lambda/s3-clean/test/: conftest.py  test_lambda_function.py
source/lambda/solution-helper/: .coveragerc  .gitignore  Makefile  README.md  conftest.py  lambda_function.py  pyproject.toml  requirements-test.txt  requirements.txt  test_lambda_function.py
(+2545 files in other folders)
