[tool.poetry]
name = "cli"
description = "Cli Module"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.54"
click = "^8.1.7"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
docker = "^6.1.2"
moto = "^5.0.20"
openapi-spec-validator = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-env = "^1.1.5"
pytest-mock = "^3.14.0"
Jinja2 = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


