[tool.poetry]
name = "s3-clean"
description = "S3 clean lambda"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.51"
botocore = "^1.35.51"
crhelper = "^2.0.12"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.4"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
moto = "^5.0.18"
mock = "^5.1.0"
Jinja2 = "^3.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
