[tool.poetry]
name = "solution-helper"
description = "Solution helper lambda"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.51"
requests = "^2.32.3"
crhelper = "^2.0.12"


[tool.poetry.group.dev.dependencies]
botocore = "^1.35.51"
coverage = "^7.6.4"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
mock = "^5.1.0"
moto = "^5.0.18"
Jinja2 = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
