[tool.poetry]
name = "custompyhook"
description = "Custom Python Hook lambda function"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
moto = "^5.0.20"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
mock = "^5.1.0"
Jinja2 = "^3.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
